[package]
name = "esmeralde-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
structopt = "0.3.23"
regex = "1.5.4"
chrono = "0.4.19"

[dependencies.serenity]
version = "0.10.9"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.11.0"
features = ["macros", "rt-multi-thread"]